--- a/salut/index.html
+++ b/salut/index.html
@@ -42,10 +42,10 @@
       <div class="col-md-7">
         <div id="smoothmenu" class="ddsmoothmenu lang-en">
           <ul>
-            <li><a href="../#2011"  id="menu-2011">2011 Elections</a></li>
-            <li><a href="../#2013"  id="menu-2013">Upcoming elections</a></li>
+            <li><a href="../#"  id="menu-2011">2011 Elections</a></li>
+            <li><a href="../#"  id="menu-2013">Upcoming elections</a></li>
             <li><a href="index.html"  id="menu-play">Charts</a> </li>
-            <li><a href="../#about"  id="menu-play">About</a> </li>
+            <li><a href="../#"  id="menu-play">About</a> </li>
           </ul>
          
         </div>
