added new features and share button

--- a/charts/index.html
+++ b/charts/index.html
@@ -82,7 +82,9 @@
          <option value=1>Governorate Level</option>
          <option value=2>Circonscription Level</option>
       </optgroup>
-      </select>    
+      </select> 
+
+    <a href="notes.html" id="notes" >Notes</a>   
    	<div id="chart"></div>
 
    	<select id="simple2"></select>
